tests/negative/gold/final_field_no_value_test.gold
tests/negative/final_field_no_value_test.toit:11:19: error: Can't assign to final field 'field'
  (A "str").field = "can't assign to final"
                  ^
EXCEPTION error. 
FINAL_FIELD_ASSIGNMENT_FAILED
  0: A.field=                  tests/negative/final_field_no_value_test.toit:7:3
  1: main                      tests/negative/final_field_no_value_test.toit:11:19
